Jwt fonctional test